# factorio_watch_rs

./: .gitignore  Cargo.toml
src/: main.rs
